# progest-app

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  user_qa.md
crates/progest-cli/: Cargo.toml
crates/progest-cli/src/: context.rs  main.rs  output.rs  prompter.rs  walk.rs
crates/progest-cli/src/commands/: ai.rs  clean.rs  doctor.rs  init.rs  lint.rs  mod.rs  rename.rs  scan.rs  search.rs  tag.rs  undo.rs  view.rs
crates/progest-cli/tests/: clean_smoke.rs  cli_flow.rs  lint_smoke.rs  rename_smoke.rs  search_smoke.rs  undo_redo_smoke.rs
crates/progest-cli/tests/support/: mod.rs
crates/progest-core/: Cargo.toml
crates/progest-core/benches/: scan.rs
crates/progest-core/src/: create.rs  delete.rs  lib.rs  media.rs  tag.rs
crates/progest-core/src/accepts/: evaluate.rs  loader.rs  mod.rs  resolve.rs  schema.rs  types.rs  writer.rs
crates/progest-core/src/ai/: audit.rs  context.rs  keychain.rs  loader.rs  mod.rs  prompt.rs  provider.rs  types.rs
crates/progest-core/src/fs/: fault.rs  filesystem.rs  hidden.rs  ignore.rs  mem.rs  mod.rs  path.rs  placeholder.rs  scanner.rs
crates/progest-core/src/history/: error.rs  inverse.rs  migration.rs  mod.rs  store.rs  types.rs
crates/progest-core/src/history/migrations/: 0001_initial.sql
crates/progest-core/src/identity/: fingerprint.rs  mod.rs
crates/progest-core/src/import/: apply.rs  mod.rs  preview.rs  ranking.rs
crates/progest-core/src/index/: error.rs  migration.rs  mod.rs  row.rs  store.rs
crates/progest-core/src/index/migrations/: 0001_initial.sql  0002_search.sql  0003_case_insensitive_path.sql
crates/progest-core/src/lint/: index_writer.rs  mod.rs  orchestrator.rs  report.rs
crates/progest-core/src/meta/: dirmeta.rs  document.rs  mod.rs  pending.rs  store.rs
crates/progest-core/src/naming/: case.rs  fill.rs  loader.rs  mod.rs  pipeline.rs  suggest.rs  types.rs
crates/progest-core/src/project/: document.rs  layout.rs  mod.rs  preview.rs  root.rs
crates/progest-core/src/reconcile/: change_set.rs  error.rs  mod.rs  reconciler.rs  report.rs
crates/progest-core/src/rename/: apply.rs  mod.rs  ops.rs  preview.rs  sequence.rs
crates/progest-core/src/rules/: applies_to.rs  constraint.rs  eval.rs  inheritance.rs  loader.rs  mod.rs  template.rs  types.rs
crates/progest-core/src/search/: ast.rs  execute.rs  lex.rs  mod.rs  parse.rs  plan.rs  validate.rs  views.rs
crates/progest-core/src/sequence/: detect.rs  mod.rs  types.rs
crates/progest-core/src/template/: apply.rs  mod.rs
crates/progest-core/src/thumbnail/: ffmpeg.rs  generate.rs  mod.rs
crates/progest-core/src/watch/: error.rs  mod.rs  watcher.rs
crates/progest-core/tests/: accepts_golden.rs  fs_scan.rs  history_flow.rs  index_persistence.rs  meta_pending.rs  meta_roundtrip.rs  naming_integration.rs  reconcile_flow.rs  rules_golden.rs  search_golden.rs  watch_flow.rs
crates/progest-core/tests/accepts_golden/10_builtin_image_alias/: project.toml
crates/progest-core/tests/accepts_golden/10_builtin_image_alias/cases/: case_a_image_passes.yaml  case_b_video_rejected.yaml  case_c_svg_passes_per_docs.yaml
crates/progest-core/tests/accepts_golden/20_project_alias_override/: project.toml
crates/progest-core/tests/accepts_golden/20_project_alias_override/cases/: case_a_png_passes.yaml  case_b_tif_dropped_by_override.yaml
crates/progest-core/tests/accepts_golden/30_compound_ext/: project.toml
crates/progest-core/tests/accepts_golden/30_compound_ext/cases/: case_a_tar_gz_passes.yaml  case_b_plain_gz_rejected.yaml
crates/progest-core/tests/accepts_golden/40_inherit_union/: project.toml
crates/progest-core/tests/accepts_golden/50_mode_strict/: project.toml
crates/progest-core/tests/accepts_golden/60_no_extension_sentinel/: project.toml
crates/progest-core/tests/rules_golden/10_1_shot_assets/: rules.toml
crates/progest-core/tests/rules_golden/10_1_shot_assets/cases/: case_a_pass.yaml  (+2 more)
crates/progest-core/tests/rules_golden/10_2_scene_seq/: rules.toml
crates/progest-core/tests/rules_golden/10_3_constraint_and/: rules.toml
crates/progest-core/tests/rules_golden/10_4_override/: rules.toml
crates/progest-core/tests/rules_golden/10_5_specificity/: rules.toml
crates/progest-core/tests/rules_golden/10_6_applies_to_array/: rules.toml
crates/progest-core/tests/rules_golden/coverage_4_3_literal_braces/: rules.toml
crates/progest-core/tests/rules_golden/coverage_4_4_field_type_mismatch/: rules.toml
crates/progest-core/tests/rules_golden/coverage_4_8_project_compound/: rules.toml
crates/progest-core/tests/rules_golden/coverage_5_6_reserved_words/: rules.toml
crates/progest-core/tests/rules_golden/coverage_5_7_nfc_normalization/: rules.toml
crates/progest-core/tests/rules_golden/coverage_7_2_kind_change/: rules.toml
crates/progest-core/tests/rules_golden/coverage_7_4_source_hierarchy/: rules.toml
crates/progest-core/tests/rules_golden/regression_codex_1_schema_v2/: rules.toml
crates/progest-core/tests/rules_golden/regression_codex_3_compound_ext/: rules.toml
crates/progest-core/tests/rules_golden/regression_codex_4_prefix_on_stem/: rules.toml
crates/progest-core/tests/rules_golden/trace_not_applicable/: rules.toml
crates/progest-core/tests/search_golden/: 10_1_freetext_and_clauses.toml  10_2_or_with_negation.toml  10_3_date_range.toml  10_4_custom_field_range.toml  10_5_negated_path.toml  10_6_quoted_glob.toml  10_7_type_and_multi_warning.toml  10_8_unknown_key_short_circuits.toml  10_9_under_filter.toml
crates/progest-core/tests/support/: mod.rs
crates/progest-tauri/: Cargo.toml  tauri.conf.json
crates/progest-tauri/capabilities/: default.json
crates/progest-tauri/src/: accepts_commands.rs  ai_commands.rs  commands.rs  crud_commands.rs  delete_commands.rs  file_inspector_commands.rs  history_commands.rs  import_commands.rs  lib.rs  lint_commands.rs  media_commands.rs  menu.rs  progress.rs  project_init_commands.rs  recent.rs  rescan_commands.rs  state.rs  template_commands.rs  thumbnail_commands.rs
(+160 files in other folders)
