[workspace]
members = [
    "crates/progest-core",
    "crates/progest-cli",
    "crates/progest-merge",
    "crates/progest-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/progest-app/progest-app"
homepage = "https://github.com/progest-app/progest-app"
authors = ["Progest contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tempfile = "3"
uuid = { version = "1", features = ["v7", "serde"] }
blake3 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "8"
notify-debouncer-full = "0.6"
criterion = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
