[package]
name = "progest-cli"
description = "Command-line interface for Progest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "progest"
path = "src/main.rs"

[dependencies]
progest-core = { path = "../progest-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
