[package]
name = "progest-core"
description = "Domain logic for Progest: metadata, naming rules, indexing, and search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
ignore.workspace = true
uuid.workspace = true
blake3.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
