[package]
name = "progest-core"
description = "Domain logic for Progest: metadata, naming rules, indexing, and search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ignore.workspace = true
uuid.workspace = true
blake3.workspace = true
rusqlite.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
globset.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
unicode-normalization.workspace = true
heck.workspace = true
chrono.workspace = true
dunce.workspace = true
which.workspace = true
image.workspace = true
psd.workspace = true
tempfile.workspace = true
libheif-rs = { workspace = true, optional = true }
trash = "5.2.5"

[features]
heic = ["dep:libheif-rs"]

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
serde_json.workspace = true
criterion.workspace = true
serde_yaml.workspace = true
proptest.workspace = true

[[bench]]
name = "scan"
harness = false

[lints]
workspace = true
