[package]
name = "progest-tauri"
description = "Tauri application shell for Progest; thin IPC glue over progest-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "progest_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "progest-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
progest-core = { path = "../progest-core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono = { workspace = true, features = ["clock"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
